# law_ml

./: clean_text.py  embeddings.py  embeddings_sentence.py  embeddings_words.py  lda.ipynb  pyproject.toml  requirements.txt  simmilarity.ipynb  simmilarity.py
data/: company_similarity_matrix.csv  terms_of_service.csv
data/companies/: activtrak.txt  aftership.txt  aha.txt  aircall.txt  algolia.txt  amplitude.txt  anaconda.txt  anyword.txt  appfollow.txt  asana.txt  assemblyai.txt  atlassian.txt  avoma.txt  awskendra.txt  blameless.txt  botpress.txt  box.txt  breezy.txt  buffer.txt  canva.txt  caspio.txt  clarifai.txt  cledara.txt  clevertap.txt  clickup.txt  codecademy.txt  cohere.txt  constantcontact.txt  coschedule.txt  couchbase.txt  databricks.txt  deel.txt  deepbrain.txt  deepgram.txt  edenai.txt  elementor.txt  employment-hero.txt  evernote.txt  flatfile.txt  getresponse.txt  (+43 more)
data/company_embeddings/: embeddings.pkl  embeddings_cleaned.pkl  embeddings_sentence_trans.pkl
data/company_similarity/: similarity_cleaned.csv  similarity_sentence_trans.csv
